@@ -2,162 +2,100 @@
 
 ![VanillaBP](./readme/vanillabp-headline.png)
 
-# Business cockpit
+# Business Cockpit
 
-The *VanillaBP business cockpit* is a UI for business people to work with business processes. It is about:
+The *VanillaBP Business Cockpit* is a UI for business people to work with business processes. It is about:
 
-1. Process instances (= workflow)
+1. Process instances (= workflows currently executed)
      1. Search for workflows by business data
      1. View active and retired workflows
-1. User tasks
+     1. Show business aspects and provide actions
+1. User tasks (= items of work of a workflow to be done by humans)
      1. Search for user tasks by business data
      1. List active and retried user tasks
      1. Fulfill user tasks
 
-Like [VanillaBP](https://www.vanillabp.io) itself was designed to be [BPMS](https://en.wikipedia.org/wiki/Business_process_management)-agnostic, also *VanillaBP business cockpit* is able act as a UI for any BPMS. This also makes it possible to display workflows and user tasks from different systems in one unifying user interface .
+Like [VanillaBP](https://www.vanillabp.io) itself was designed to be [BPMS](https://en.wikipedia.org/wiki/Business_process_management)-agnostic, also *VanillaBP Business Cockpit* is able
+act as a UI for any BPMS. This also makes it possible to display workflows and user tasks from different systems
+in one unifying user interface .
 
-To learn how to integrate your business services into the VanillaBP business cockpit check the [respective chapter](#integrate-your-business-services).
+To learn about how to integrate your business services into the VanillaBP Business Cockpit check the [respective chapter](#integrate-your-business-services).
+
+## Architecture
+
+### Conceptional
+
+In companies that use business process management, agents need a single place to organize their tasks originated in
+different workflows or even different workflow systems. Otherwise, employees would have to regularly check each individual application for new 
+tasks or use email notifications to alert them about new tasks, which then flood the inbox. To avoid this, the 
+Business Cockpit acts as that single frontend application for all workflows.
+
+The Business Cockpit runtime is a microservice. That means it is only about providing cockpit functionality.
+The workflows have to be executed by other (micro-)services (business services). Each workflow specific content
+is hosted by those business services running the workflow. So, everything to run a workflow is bundled in
+so-called "Workflow Module" within the business service for proper versioning
+(BPMN, code to run the BPMN, UI for user-tasks, backend code show/complete user-tasks).
+
+However, the Business Cockpit UI will provide all parts (Business Cockpit, usertask forms, status-sites of workflows)
+as one seamless web-application to the user without using cross-site-scripting. This is achieved by using "Module
+Federation", a mechanism to load parts of the UI (usertask forms, etc.) dynamically (not packed into the main
+web-application at compile-time).
+
+To avoid cross-site-scripting, the Business Cockpit backend acts as a proxy to business microservices. This spawns
+one consistent umbrella of security across the entire application. Any "Workflow Module" to register to the
+Business Cockpit on startup to initialize the respective proxy. Any business
+workflow or usertask lifecycle event (created, completed, cancelled) has to be reported by the "Workflow module" 
+to the Business Cockpit as well. Reporting can be done via REST or asynchronously via Kafka.
+
+This architecture also implies that not every business workflow microservice needs its own standalone web-application.
+Individual web-applications are only necessary if the workflow application has excessive UI functionality
+beyond usertasks or status-sites of workflows. Additionally, the Business Cockpit is a perfect place to add
+cross-cutting functionality (e.g. registration of absences or vacation replacements) as well as start-forms
+for business processes having no own web-application.
+
+### UI components provided by the Business Cockpit
+
+* **List(s) of usertasks:** There is a default-list showing all usertasks assigned to the user logged in, assigned 
+to the user's groups, claimed by the user or any dangling usertask (no information about assignment given). Based 
+on that, one can easily provide prefiltered lists according to any business requirement. The individual content 
+to list for each usertask (e.g. columns) is reported by the business microservice spawning the usertask.
+Additionally, the rendering of columns can be customized (e.g. render icons instead of values, etc.).
+* **A mechanism to show usertask forms:**  Once the user wants to work on or complete a usertask (by selecting an item of the 
+list of usertasks), the form's UI is loaded by using Module Federation through the registered proxy from the business
+microservice. Saving or completing the form is not part of the Business Cockpit but implemented by the business 
+microservice (providing its own API). If the form can be completed the respective business microservice will report 
+that change of status to the Business Cockpit which in turn results in an update of the list of usertasks.
+* **List(s) of workflows:** There is a default-list showing all workflows accessible to the current user, accessible
+to the user's groups or any dangling workflow (no information about access). Analogous to lists of usertasks, one 
+can easily provide prefiltered lists according to any business requirement. The individual content to list for 
+each workflow (e.g. columns) is reported by the business microservice running the workflow.
+Additionally, the rendering of columns can be customized (e.g. render icons instead of values, etc.).
+* **A mechanism to show status-sites of workflows:** Once the user wants to review the status of the workflow
+(select an item of the list of workflows), the workflow's status-site UI is loaded by using Module Federation
+through the registered proxy from the business microservice. Any data shown or action provided (e.g. cancel the
+workflow) is not part of the Business Cockpit but implemented by the business microservice (providing its own API).
+* **A mechanism to show individual workflow UI-components:** The given mechanism to show usertask forms or
+status-sites of workflows can also be used to add individual UI-components to the Business Cockpit UI. 
+You may define regions in your UI (header, menu, etc.) in which those individual components are shown. This is a
+possibility to provide additional sites like workflow start forms or sites providing functionality common to all
+running workflows (e.g. suspend/active all workflows).
+
+### Custom Business Cockpit applications
+
+The Business Cockpit can be started out-of-the-box showing a vanilla flavored design. Typically, one wants to use own
+icons, colors and fonts. To achieve this one can build an individual Spring Boot application using the Business Cockpit
+container module as a Maven-dependency. Doing so opens the way to build your own Business Cockpit UI, add custom
+UI components and custom APIs needed by those UI components.
+
+The VanillaBP Business Cockpit UI is implemented by using React. Several Node-js libraries are provided to implement
+custom UIs and usertask forms provided by business services. However, one may also use other frameworks (Vue, Angular).
+The [UI components provided by the Business Cockpit](#functionality-provided-by-the-business-cockpit) can be integrated as web-components.
 
 ## Development
-
-The VanillaBP business cockpit is a Java Spring Boot application using React as a web framework.
-
-For local development there are two preconditions:
-
-1. [A MongoDB cluster](#mongodb)
-1. [A local NPM registry](#local-npm-registry)
-
-The MongoDB and the NPM registry can be started by a prepared configuration using docker-compose:
-
-```sh
-cd development
-docker-compose up -d
-```
-
-All services are configured to NOT start automatically. So, evertime one reboots the computer the services has to be started again:
  
-```sh
-cd development
-docker-compose start
-```
-
-Afterwards one can [build and run the business cockpit](#build-and-run-the-business-cockpit).
-
-*Hint:* Building the business cockpit will also establish npm-links between the packages provided by this repository. This helps to ensure using the right version during the build and also supports local development.
-
-### MongoDB
-
-For production MongoDb one has to use replica-sets because the VanillaBP business cockpit uses the MongoDb "changestream" feature which not available otherwise.
-
-Since MongoDb exposes its own endpoint one has to add a hostname alias to the local `hosts` file:
-
-```
-127.0.0.1       business-cockpit-mongo
-```
-
-*Hint:* The file is `/etc/hosts` for Linux and `C:\Windows\System32\drivers\etc\hosts` for Windows.
-
-To connect using a client one can use these parameters:
-
-* *endpoint:* business-cockpit-mongo:27017
-* *replica-set:* rs-business-cockpit
-* *authentication DB:* business-cockpit
-* *username:* business-cockpit
-* *password:* business-cockpit
-
-### Local NPM registry
-
-As part of the build NPM packages are published which has to be used by BPMS software which wants to integrate to the VanillaBP business cockpit. Additionally, the business cockpit itself uses those packages as dependencies. To make this work for local development as well as for publishing builds one has to use a local NPM registry. For this the tool [Verdaccio](https://www.verdaccio.org/) is used which is also part of the provided `docker-compose.yaml`.
-
-To use this registry one has to create a file `.npmrc` in your home folder:
-
-```
-@vanillabp:registry=http://localhost:4873
-//localhost:4873/:_authToken="fake"
-```
-
-*Hint:* Verdaccio is preconfigured to accept unauthorized attempts of publishing NPM packages. Therefore, as you can see, the content of the authentication token `fake` is not taken into account - it just has to be filled.
-
-To connect to the registry UI use these parameters:
-
-* *URL:* [http://localhost:4873/](http://localhost:4873/)
-* *username:* admin
-* *password:* admin
-
-*Hint:* If you do repeating builds for testing then you have to use the Maven profile `unpublish-npm` which removes previously published packages from the local registry.
-
-## Build and Run the Business Cockpit
-
-The business cockpit is developed by using Java 17 and Spring Boot 3 (reactive). To build the business cockpit Maven is used:
-
-```sh
-cd vanillabp-business-cockpit
-mvn -Dnpm.registry=http://localhost:4873 package -P unpublish-npm
-```
-
-(`-P unpublish-npm` is a Maven profile which forces to unpublish NPM components previously published to Verdaccio. You might need to skip this profile for the very first build since there was no packages published before.)
-
-After the build succeeded the service can be started:
-
-```sh
-cd business-cockpit
-jar -Dspring.profiles.active=local -jar target/business-cockpit-*-runnable.jar
-```
-
-To connect to the business cockpit UI use these parameters:
-
-* *URL:* [http://localhost:8080/](http://localhost:8080/)
-* *username:* test
-* *password:* test
-
-This should show up an empty business cockpit since no user tasks or workflows were reported yet. To test this before connecting your business service one can use the [simulation service](#simulation-service).
-
-### Repeating builds
-
-During developing the Business Cockpit itself one might change only backend code and whishes to test that changes without doing a full build.
-This can be easily achieved by this Maven command:
-
-```sh
-mvn install -Plocal-install
-```
-
-If you do some UI development one can run
-
-```sh
-npm start
-```
-
-in every UI source directory to get a continuous build.
-
-Since the first build links all npm packages, changes in one packages are active immediately using this technique.
-There is one exception: The `webapp-angular`-UI in `simulator` uses the package `dev-shell-angular` and Angular does not support NPM linking. So extending `dev-shell-angular` implies the need to publish the package to the local registry after every change and update the `webapp-angular` afterward to use that change:
-
-```sh
-cd development/dev-shell-angular
-mvn -Dnpm.registry=http://localhost:4873 package -P unpublish-npm
-cd -
-cd development/simulator/src/main/webapp
-npm update --scope '@vanillabp/*'
-```
-
-## Simulation Service
-
-This is a service which can be used for local development and testing. I mimics a business service which reports user tasks and workflows to be shown in the business cockpit UI.
-
-To start it use these commands:
-
-```sh
-cd development/simulator
-java --add-opens=java.base/java.lang=ALL-UNNAMED -jar target/simulator-*-runnable.jar
-```
-
-Now you can open the [test data generator form](http://localhost:8079/testdata/usertask/form) in your browser. It gives you verify parameters to generate user tasks. For now simply press the `Generate` button. 10 new user tasks should appear in the VanillaBP business cockpit immediately.
-
-## Integrate your Business Services
-
-The [simulation service](#simulation-service) also acts as template for your services. In `development/simulator/src/main/webapp` you will find samples of user task forms.
-
-to be completed...
+* **Building a customized Business Cockpit:** [container/README.md](./container/README.md)
+* **Integrate your business service:** [development/simulator/README.md](./development/simulator/README.md)
+* **Contributing to the VanillaBP Business Cockpit:** [development/README.md](./development/README.md)
 
 ## Noteworthy & Contributors
 
@@ -167,7 +105,7 @@ VanillaBP was developed by [Phactum](https://www.phactum.at) with the intention 
 
 ## License
 
-Copyright 2022 Phactum Softwareentwicklung GmbH
+Copyright 2024 Phactum Softwareentwicklung GmbH
 
 Licensed under the Apache License, Version 2.0
 
